--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
- <script async src="https://www.googletagmanager.com/gtag/js?id='UA-211702324-2"></script>
+ <script async src="https://www.googletagmanager.com/gtag/js?id='UA-000000000-0"></script>
  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-211702324-2');
+  gtag('config', 'UA-000000000-0');
  </script>
  
  </head>
@@ -162,7 +162,7 @@ a {
      </div>
      
  <div class="card"> 
-    <model-viewer loading="eager" src="Models/part2_ver_3.glb?sound=Sound/NOHO West Rooftop Pool Audio2.mp3" camera-controls
+    <model-viewer loading="eager" src="Models/part2_ver_5_1.glb?sound=Sound/Pool party sound_ver3_15sec.mp3" camera-controls
                    camera-orbit="0deg 45deg 50%" autoplay animation-name="" id="model-viewer" id="reveal" exposure="1" shadow-intensity="1" ar ar-modes="scene-viewer webxr quick-look" ios-src="Models/Nov1PoolParty.reality"
                     alt="NOHO WEST" auto-rotate-delay="0" ar-scale="auto"
                     slot= "progress-bar"
