--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ a {
  <div class="card"> 
     <model-viewer loading="eager" src="Models/part2_ver_5_1.glb?sound=Sound/Pool party sound_ver3_15sec.mp3" camera-controls
                    camera-orbit="0deg 45deg 50%" autoplay animation-name="" id="model-viewer" id="reveal" exposure="1" shadow-intensity="1" ar ar-modes="scene-viewer webxr quick-look" ios-src="Models/Nov1PoolParty.reality"
-                    alt="NOHO WEST" auto-rotate-delay="0" ar-scale="auto"
+                    alt="NOHO West Test" auto-rotate-delay="0" ar-scale="auto"
                     slot= "progress-bar"
                     style="z-index: 1; width: 100%; height: 480px; position: static; ">
                     <button slot="ar-button" 
