--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ a {
      </div>
      
  <div class="card"> 
-    <model-viewer loading="eager" src="Models/part2_ver_5_1.glb?sound=Sound/Pool party sound_ver3_15sec.mp3" camera-controls
+    <model-viewer loading="eager" src="Models/bungle_in_the_jungle_glb___1667597982138.glb?sound=Sound/Pool party sound_ver3_15sec.mp3" camera-controls
                    camera-orbit="0deg 45deg 50%" autoplay animation-name="" id="model-viewer" id="reveal" exposure="1" shadow-intensity="1" ar ar-modes="scene-viewer webxr quick-look" ios-src="Models/Nov1PoolParty.reality"
                     alt="NOHO West Test" auto-rotate-delay="0" ar-scale="auto"
                     slot= "progress-bar"
