--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@ a {
         });
       </script>
    <div class="centerImage">   
-   <button onclick="location.href='https://avertek.github.io/NOHO-West/'" type="button" slot="" 
+   <!-- <button onclick="location.href='https://avertek.github.io/NOHO-West/'" type="button" slot="" 
                     style="z-index: 9; background-color: #FFFFFF; border-radius: 8px; border: 1 px solid white; position: static; height: 35px; width: auto;
                           color:#4D008C; font-family:Avenir Next LT Pro"><strong>MEET SOFIA</strong>
        </button> 
-         </div>
+         </div> -->
          <br><br>
  
   <div class="card">
